[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Plague_Doctor_v3.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.0
height = 23.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.8937, 77.4638 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 19.5 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2, -3 )
scale = Vector2( 0.414, 0.414 )
texture = ExtResource( 1 )

[node name="HitArea" type="Area2D" parent="Sprite"]

[node name="AttakArea" type="CollisionShape2D" parent="Sprite/HitArea"]
position = Vector2( -98.8647, 50.7246 )
shape = SubResource( 2 )
disabled = true

[connection signal="area_entered" from="Sprite/HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="body_entered" from="Sprite/HitArea" to="." method="_on_HitArea_body_entered"]
